--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container" id="content"></div>
+    <div id="cookieConsentBanner" class="cookie-consent">
+        <p>Este sitio web utiliza cookies para mejorar la experiencia del usuario. Ajusta tus preferencias de cookies:</p>
+        <div class="cookie-options">
+            <label>
+                <input type="checkbox" name="essential" checked disabled>
+                Cookies Esenciales (necesarias para el funcionamiento del sitio)
+            </label>
+            <label>
+                <input type="checkbox" name="performance">
+                Cookies de Rendimiento (para analizar el uso del sitio)
+            </label>
+            <label>
+                <input type="checkbox" name="marketing">
+                Cookies de Marketing (para personalizar la publicidad)
+            </label>
+        </div>
+        <button id="savePreferences">Guardar Preferencias</button>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
@@ -38,6 +55,8 @@
           <a href="https://wa.me/15147954730" target="_blank" data-toggle="tooltip" data-placement="left" title="Envíanos un mensaje"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%; fill: rgb(255, 255, 255); stroke: none;"><path d="M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z"></path></svg></a>
         </div>
       </div>
+
+
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -118,10 +137,10 @@
                 productImgContainer.className = 'image-container d-flex justify-content-center my-3';
 
                 const productImg = document.createElement('img');
-                productImg.src = `img/${product.image}`;
+                productImg.src = `img/${product.imageThumbnail}`;
                 productImg.className = 'card-img-top mx-5';
                 productImg.alt = `${product.name} Image`;
-                productImg.style.height = '226px';
+                //productImg.style.height = '226px';
 
                 // Añadir la imagen al contenedor de la imagen
                 productImgContainer.appendChild(productImg);
@@ -244,5 +263,50 @@
         // Cargar y mostrar el JSON al cargar la página
         window.onload = loadJSON;
     </script>
+
+
+    <!-- Google Analytics -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+    const cookieBanner = document.getElementById('cookieConsentBanner');
+    const savePreferencesButton = document.getElementById('savePreferences');
+    const checkboxes = document.querySelectorAll('.cookie-options input[type="checkbox"]');
+
+    savePreferencesButton.addEventListener('click', function() {
+        let preferences = {};
+        checkboxes.forEach(function(checkbox) {
+            preferences[checkbox.name] = checkbox.checked;
+        });
+        saveCookiePreferences(preferences);
+        cookieBanner.style.display = 'none';
+    });
+
+    function saveCookiePreferences(preferences) {
+        // Guardar las preferencias de cookies en localStorage o cookies
+        localStorage.setItem('cookie_preferences', JSON.stringify(preferences));
+    }
+
+    function loadCookiePreferences() {
+        // Cargar las preferencias de cookies guardadas
+        const preferences = localStorage.getItem('cookie_preferences');
+        if (preferences) {
+            const parsedPreferences = JSON.parse(preferences);
+            checkboxes.forEach(function(checkbox) {
+                checkbox.checked = parsedPreferences[checkbox.name];
+            });
+        }
+    }
+
+    // Mostrar el banner solo si no se han guardado preferencias previamente
+    if (!localStorage.getItem('cookie_preferences')) {
+        cookieBanner.style.display = 'block';
+    } else {
+        loadCookiePreferences();
+    }
+});
+
+        
+    </script>
+
 </body>
 </html>
