--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title></title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -334,6 +335,15 @@ document.addEventListener("DOMContentLoaded", function() {
             }
         }
     }
+
+                // Verificar si Google Analytics está cargado
+                setTimeout(() => {
+                if (isGoogleAnalyticsLoaded() && isGtagLoaded()) {
+                    console.log('Google Analytics está cargado correctamente.');
+                } else {
+                    console.log('Google Analytics no se cargó correctamente.');
+                }
+            }, 1000); // Dar tiempo para cargar el script
 
     // Mostrar el banner solo si no se han guardado preferencias previamente
     if (!localStorage.getItem('cookie_preferences')) {
