Change primary color

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </label>
       </div>
       <button
-        class="indie-flower-font btn botones-personalizados"
+        class="indie-flower-font btn bg-primary"
         id="savePreferences"
       >
         Enregistrer préférences
       </button>
       <button
-        class="indie-flower-font btn botones-personalizados"
+        class="indie-flower-font btn bg-primary"
         id="rejectAll"
       >
         Tout refuser
@@ -79,11 +79,11 @@
               class="img-fluid mb-3"
             />
             <p
-              class="text-center mochiy-pop-font orange-font fs-5 lh-2 mb-0"
+              class="text-center mochiy-pop-font text-primary fs-5 lh-2 mb-0"
               id="modalProductSize"
             ></p>
             <p
-              class="text-center mochiy-pop-font orange-font fs-5 lh-2 mb-0"
+              class="text-center mochiy-pop-font text-primary fs-5 lh-2 mb-0"
               style="white-space: pre-wrap"
               id="modalProductPrice"
             ></p>
@@ -97,7 +97,7 @@
                   image-rendering="optimizeQuality"
                   fill-rule="evenodd"
                   clip-rule="evenodd"
-                  fill="orange"
+                  fill="rgb(237 54 134)"
                   viewBox="0 0 512 330.845"
                 >
                   <path
@@ -121,7 +121,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
                 x="0px"
-                fill="orange"
+                fill="rgb(237 54 134)"
                 y="0px"
                 viewBox="0 0 122.88 122.84"
                 style="enable-background: new 0 0 122.88 122.84"
@@ -151,7 +151,7 @@
           <div class="modal-footer random-background">
             <button
               type="button"
-              class="btn btn-secondary botones-personalizados"
+              class="btn btn-primary"
               data-bs-dismiss="modal"
             >
               Fermer
@@ -207,7 +207,7 @@
                 <h3>QUESTIONS ET RÉGLEMENTATION POUR LA LOCATION DE NOS JEUX GONFLABLES</h3>
                 <p>Vous avez des questions sur le fonctionnement de la location de nos jeux gonflables. Consulter notre section Questions fréquentes (FAQ), elle répondra à la majorité de ceux-ci.</p>
 
-                <a id="faqButton" class="btn-primary" data-bs-toggle="modal" data-bs-target="#faqModal">
+                <a id="faqButton" class="btn btn-primary text-bg-light" data-bs-toggle="modal" data-bs-target="#faqModal">
                     Voir FAQs
                   </a>
 
@@ -225,9 +225,9 @@
                 <a href="https://www.instagram.com/amusezvous2007/" target="_blank">
                     <img class="social-icons" src="/img/instagram-icon.svg" alt="">
                 </a>
-                <a href="https://www.instagram.com/amusezvous2007/" target="_blank">
+                <!-- <a href="https://www.instagram.com/amusezvous2007/" target="_blank">
                     <img class="social-icons" src="/img/facebook-icon.svg" alt="">
-                </a>
+                </a> -->
             <p>Tous les droits reserves &copy; <span id="current-year"></span></p>
         </div>
     </footer>
