Add hand icon and change colors on FAQ list

--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
         <div class="col-12 col-sm-4 mb-4 mb-sm-0 d-flex justify-content-center">
             <div class="align-self-center p-4">
                 <h3>Questions et réglementation pour la location de nos jeux gonflables</h3>
-                <p>Vous avez des questions sur le fonctionnement de la location de nos jeux gonflables. Consulter notre section Foire aux questions (FAQ), elle répondra à la majorité de celles-ci.</p>
+                <p>Vous avez des questions sur le fonctionnement de la location de nos jeux gonflables. Consulter notre section foire aux questions (FAQ), elle répondra à la majorité de celles-ci.</p>
 
                 <a id="faqButton" class="btn btn-primary text-bg-light" data-bs-toggle="modal" data-bs-target="#faqModal">
+                  <img src="img/tap.svg" class="icon-cta" alt="Tap to open" style="width: 50px;">
                     Voir FAQs
                   </a>
 
