--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                 <a href="https://www.instagram.com/amusezvous2007/" target="_blank">
                     <img class="social-icons" src="/img/instagram-icon.svg" alt="">
                 </a>
-                <!-- <a href="https://www.instagram.com/amusezvous2007/" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=61563338976234" target="_blank">
                     <img class="social-icons" src="/img/facebook-icon.svg" alt="">
-                </a> -->
+                </a>
             <p>Tous les droits reserves &copy; <span id="current-year"></span></p>
         </div>
     </footer>
